--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.25.5",
+    "sqlite3": "^5.1.2"
   }
 }
